--- a/index.html
+++ b/index.html
@@ -17,8 +17,22 @@
 
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
-    <script src="index.js"></script>
+    <script type="text/babel">
+
+        const root = document.querySelector('#root');
+
+        const page = () => {
+            return <div className="teste">
+                <h1 id="t1">Hello World</h1>
+                <h4 id='t2'>Usando React JS - page</h4>
+            </div>
+        }
+
+        ReactDOM.render(page(), root)
+
+    </script>
 
 </body>
 
